css/style.css
body {
  color: #434455;
  font-family: "Roboto", sans-serif;
  background-color: #ffffff;
}

img {
  display: block;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

button {
  border: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

p {
  margin: 0;
}

.container {
  width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}

.container-header {
  width: 1158px;
  padding: 0 15px;
  display: flex;
  align-items: center;
}

.header {
  background-color: #ffffff;
  border-bottom: 1px solid #e7e9fc;
  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
}

.navigation {
  display: flex;
  align-items: center;
}

.logo {
  font-family: "Raleway", sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
  padding: 24px 0;
  margin-right: 76px;
}

.logo-color {
  color: #2e2f42;
}

.list-header {
  display: flex;
  gap: 40px;
  padding: 24px 0;
}

.link-header {
  color: #2e2f42;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.02em;
  padding: 24px 0;
  position: relative;
}

.link-header:hover {
  color: #404bbf;
}

.link-header:focus {
  color: #404bbf;
}

.current {
  color: #404bbf;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.current::after {
  position: absolute;
  bottom: -1px;
  right: 0px;
  content: "";
  width: 100%;
  height: 4px;
  background-color: rgba(64, 75, 191, 1);
  border-radius: 2px;
}

.contacts {
  font-style: normal;
  margin-left: auto;
}

.list-wrapper {
  display: flex;
  gap: 40px;
}

.list-contacts {
  font-size: 16px;
  line-height: 1.5;
  color: #434455;
  letter-spacing: 0.02em;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.list-contacts:hover {
  color: #404bbf;
}

.list-contacts:focus {
  color: #404bbf;
}

h1 {
  font-size: 56px;
  font-weight: 700;
  line-height: 1.07;
  color: #ffffff;
}

.title-section {
  background-color: #2e2f42;
  background-image: linear-gradient(
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url(/images/solutions_image.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;

  height: 600px;

  padding: 188px 0;
  max-width: 1440px;
  margin: 0 auto;
}

.container-title {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.title {
  text-align: center;
  letter-spacing: 0.02em;
  max-width: 496px;
}

.button-order {
  background-color: #4d5ae5;
  color: #ffffff;
  cursor: pointer;
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.04em;
  width: 169px;
  height: 56px;
  border-radius: 4px;
  box-shadow: 0px 4px 4px 0px #00000026;
  display: block;
  min-width: 169px;
  margin-top: 48px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.button-order:hover {
  background-color: #404bbf;
}

.button-order:focus {
  background-color: #404bbf;
}

.caption {
  font-size: 20px;
  font-weight: 500;
  line-height: 1.2;
  letter-spacing: 0.02em;
  margin-bottom: 8px;
}

.p-main {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  width: 264px;
}

.section-features {
  padding: 120px 0;
}

.container-features {
  display: flex;
  align-items: center;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.list-features {
  display: flex;
  gap: 24px;
}

.svg-block {
  width: 264;
  height: 112px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(244, 244, 253, 1);
  border: rgba(142, 143, 153, 1) 1px solid;
  border-radius: 4px;
  margin-bottom: 8px;
}

.features-svg {
  width: 60px;
  height: 64px;
}

.item-features {
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.section-cards {
  background-color: #e7e9fc;
  padding: 120px 0;
}

.title-team {
  font-size: 36px;
  line-height: 1.11;
  text-align: center;
  letter-spacing: 0.02em;
  text-transform: capitalize;
  color: #2e2f42;
  margin-bottom: 72px;
}

.list-team {
  display: flex;
  gap: 24px;
}

.item-team {
  background-color: #ffffff;
  width: 264px;
  border-radius: 4px;
  border-radius: 0px 0px 4px 4px;
  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
}

.container-team {
  padding: 32px 0;
}

.title-cards {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  text-align: center;
  margin-bottom: 8px;
}
.paragraph-team {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  text-align: center;
}

.list-socials {
  display: flex;
  justify-content: space-between;
  padding: 8px 16px;
  justify-content: center;
  gap: 24px;
}

.item-socials {
  width: 40px;
  height: 40px;
  background-color: rgba(77, 90, 229, 1);
  border-radius: 50%;
}

.social-svg {
  width: 16px;
  height: 16px;
  fill: rgba(244, 244, 253, 1);
}

.link-socials {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.3s;
  background-color: #4d5ae5;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.link-socials:hover {
  background-color: #404bbf;
}

.link-socials:focus {
  background-color: #404bbf;
}

.section-portfolio {
  padding: 120px 0 120px 0;
}

.container-portfolio {
  border-top: none;
}

.headline-portfolio {
  display: flex;
  justify-content: center;
  margin-bottom: 72px;
  font-size: 36px;
  font-weight: 700;
  line-height: 40px;
  letter-spacing: 0.02em;
}

.list-portfolio {
  display: flex;
  flex-wrap: wrap;
  gap: 48px 24px;
}

.item-portfolio {
  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.item-portfolio:hover {
  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
}

.portfolio-description {
  border: 1px solid rgba(231, 233, 252, 1);
  border-top: none;
  width: 300;
  height: 120px;
  padding-top: 32px;
  padding-left: 16px;
}

.hidden-portfolio {
  position: absolute;
  top: 0;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #f4f4fd;
  padding: 40px 32px;
  background-color: #4d5ae5;
  height: 100%;
  width: 100%;
  transform: translateY(100%);
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.item-portfolio:hover .hidden-portfolio {
  transform: translateY(0%);
}

.img-wrapper {
  position: relative;
  overflow: hidden;
}

.paragraph-footer {
  line-height: 1.5;
  color: #f4f4fd;
  letter-spacing: 0.02em;
  max-width: 264px;
}

.title-portfolio {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
}

.paragraph-portfolio {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
}

.footer {
  background-color: #2e2f42;
  color: #f4f4fd;
  padding: 100px 0;
}

.logo-footer {
  font-family: "Raleway", sans-serif;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: #4d5ae5;
  display: inline-block;
  margin-bottom: 16px;
}

.logo-color-footer {
  color: #f4f4fd;
}

.footer-wrapper {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  width: 264px;
}

.footer {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.container-footer {
  display: flex;
  gap: 120px;
  align-items: baseline;
}

.logo-wrapper {
  display: flex;
  flex-direction: column;
  margin-right: 120px;
}

.list-socials-footer {
  display: flex;
  gap: 16px;
}

.paragraph-footer-social {
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #ffffff;
  margin-bottom: 16px;
}

.link-footer-socials:hover {
  background-color: #31d0aa;
}

.link-footer-socials:focus {
  background-color: #31d0aa;
}

